Fixes the spacing on the register page

--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -10,6 +10,10 @@ h2 {
   border-color: rgb(216, 12, 12);
 }
 
+.register-title {
+  padding: 1em;
+  margin-bottom: 2em;
+}
 
 .username-error,
 .password-error,
